3-eks-deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: nodejs-express-app
